Update file links

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="styles.css">
   <title>ARB LegalBot</title>
-  style.css
-  assets/ARB_LegalBot_Icon.png
+  
+  
 </head>
 <body>
   <header>
-    assets/ARB_LegalBot_Icon.png
+    <img src="assets/ARB_LegalBot_Icon.png" alt="ARB LegalBot">
     <h1>ARB LegalBot</h1>
     <p class="subtitle">California & Federal Environmental Law Assistant</p>
+    <script>app.js</script>
   </header>
 
   <main>
@@ -41,6 +43,7 @@
     <p>Created by Copilot & Mason Eastman · California Air Resources Board</p>
   </footer>
 
-  app.js</script>
+  
 </body>
 </html>
+
