--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <title>ARB LegalBot</title>
   
   
@@ -13,7 +13,6 @@
     <img src="assets/ARB_LegalBot_Icon.png" alt="ARB LegalBot">
     <h1>ARB LegalBot</h1>
     <p class="subtitle">California & Federal Environmental Law Assistant</p>
-    <script>app.js</script>
   </header>
 
   <main>
@@ -43,7 +42,8 @@
     <p>Created by Copilot & Mason Eastman · California Air Resources Board</p>
   </footer>
 
-  
+  <script src="app.js"></script>
 </body>
 </html>
+
 
